--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,6 @@ jobs:
         run: docker build -t ${{ github.repository }} .
       - name: Deploy image
         run: |
-          docker stop ${{ github.repository }} || true
-          docker rm ${{ github.repository }} || true
-          docker run -p 3000:3000 -d ${{ github.repository }}
+          docker stop ${{ github.event.repository.name }} || true
+          docker rm ${{ github.event.repository.name }} || true
+          docker run -p 3000:3000 -d --name ${{ github.event.repository.name }} ${{ github.repository }}
